--- a/Emparejados/src/Vista/ElegirNombresMultijugador.fxml
+++ b/Emparejados/src/Vista/ElegirNombresMultijugador.fxml
@@ -7,17 +7,21 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
-<StackPane stylesheets="@../application/estiloAzul.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorElegirNombresMultijugador">
+<StackPane fx:id="fondo" styleClass="fondoMenu" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorElegirNombresMultijugador">
    <children>
-      <Pane fx:id="pane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: ffffff;" stylesheets="@../application/estiloAzul.css">
+      <Pane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: ffffff;">
          <children>
             <Label layoutX="63.0" layoutY="92.0" text="Elige un nombre de 3 letras para el Jugador 1" />
             <TextField fx:id="nombreJ1" layoutX="328.0" layoutY="87.0" />
             <Label layoutX="63.0" layoutY="158.0" text="Elige un nombre de 3 letras para el Jugador 2" />
             <TextField fx:id="nombreJ2" layoutX="328.0" layoutY="153.0" />
-            <Button layoutX="488.0" layoutY="330.0" mnemonicParsing="false" onAction="#jugarHandler" text="Jugar" />
-            <StackPane fx:id="circuloSonido" layoutX="63.0" layoutY="283.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="84.0" prefWidth="91.0" styleClass="fondoBoton" stylesheets="@../application/estiloAzul.css">
+            <Button layoutX="421.0" layoutY="285.0" mnemonicParsing="false" onAction="#jugarHandler" text="Jugar">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font></Button>
+            <StackPane fx:id="circuloSonido" layoutX="72.0" layoutY="243.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="84.0" prefWidth="91.0" styleClass="fondoBoton">
                <children>
                   <ImageView fx:id="iconoSonido" fitHeight="54.0" fitWidth="58.0" onMouseClicked="#clickSound" pickOnBounds="true" preserveRatio="true">
                      <image>
