--- a/Emparejados/src/Vista/ElegirNombresMultijugador.fxml
+++ b/Emparejados/src/Vista/ElegirNombresMultijugador.fxml
@@ -9,19 +9,19 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane fx:id="fondo" styleClass="fondoMenu" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorElegirNombresMultijugador">
+<StackPane fx:id="fondo" styleClass="fondoMenu" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ControladorElegirNombresMultijugador">
    <children>
       <Pane prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: ffffff;">
          <children>
-            <Label layoutX="63.0" layoutY="92.0" text="Elige un nombre de 3 letras para el Jugador 1" />
-            <TextField fx:id="nombreJ1" layoutX="328.0" layoutY="87.0" />
-            <Label layoutX="63.0" layoutY="158.0" text="Elige un nombre de 3 letras para el Jugador 2" />
-            <TextField fx:id="nombreJ2" layoutX="328.0" layoutY="153.0" />
-            <Button layoutX="421.0" layoutY="285.0" mnemonicParsing="false" onAction="#jugarHandler" text="Jugar">
+            <Label layoutX="23.0" layoutY="91.0" text="Elige un nombre de 3 letras para el Jugador 1" />
+            <TextField fx:id="nombreJ1" layoutX="353.0" layoutY="87.0" prefHeight="25.0" prefWidth="111.0" />
+            <Label layoutX="23.0" layoutY="157.0" text="Elige un nombre de 3 letras para el Jugador 2" />
+            <TextField fx:id="nombreJ2" layoutX="353.0" layoutY="153.0" prefHeight="25.0" prefWidth="111.0" />
+            <Button layoutX="393.0" layoutY="243.0" mnemonicParsing="false" onAction="#jugarHandler" text="Jugar">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font></Button>
-            <StackPane fx:id="circuloSonido" layoutX="72.0" layoutY="243.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="84.0" prefWidth="91.0" styleClass="fondoBoton">
+            <StackPane fx:id="circuloSonido" layoutX="72.0" layoutY="220.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="84.0" prefWidth="91.0" styleClass="fondoBoton">
                <children>
                   <ImageView fx:id="iconoSonido" fitHeight="54.0" fitWidth="58.0" onMouseClicked="#clickSound" pickOnBounds="true" preserveRatio="true">
                      <image>
